# neural-memory

./: .dockerignore  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MAC_SUPPORT_PLAN.md  NOTICE  README.md  TODO-DREAM-LEAK-FIX.md  __init__.py  install.sh  requirements.txt
.github/workflows/: ci.yml
bench-pod/: CHECKSUMS.txt  README.md  bench.sh
bench-pod/compare/: __init__.py  compare.py  schema.py  verdict_template.md.j2
bench-pod/datasets/: fetch.py  manifest.json
bench-pod/datasets/bundled/: synthetic_v1.json
bench-pod/quadlet/: bench.pod
bench-pod/runners/: __init__.py  amem_runner.py  cognee_runner.py  common.py  hindsight_runner.py  letta_runner.py  mazemaker_runner.py  mem0_runner.py
bench-pod/scripts/: detect_runtime.sh  install_quadlet.sh  run_all.sh
benchmarks/: README.md  bake_afe_facts.py  bake_chunked_sessions.py  bake_longmemeval_s_cache.py  bench_neural.py  dream_on_cache.py  lme_eval.py  lme_real.py  mazemaker_godbench.py  micro_pipeline.py  migrate_colbert.py  verify_cache_health.py
benchmarks/ae_domain_memory_bench/: queries.py  run_ae_domain_bench.py  test_bench_subsets_gate.py
benchmarks/audit/: codex-v5-prompt.md  codex-v5-verdict-2026-04-28.md  codex-v8-prompt.md  codex-v8-verdict-2026-04-28.md
benchmarks/neural_memory_benchmark/: __init__.py  benchmark.py  config.py  dataset.py  dataset_real.py  dataset_v2.py  report.py  runner.py
benchmarks/neural_memory_benchmark/suites/: __init__.py  agentic.py  baseline.py  channel_ablation.py  concurrent.py  conflict.py  conflict_quality.py  continuity.py  continuity_controls.py  diversity.py  dream.py  dream_derived_fact.py  gpu.py  graph.py  graph_reasoning.py  hnsw_exactness.py  lean_skynet.py  lstm_knn.py  mssql.py  qa.py  retrieval.py  scalability.py
hermes-plugin/: README.md  __init__.py  access_logger.py  config.py  cpp_bridge.py  cpp_bridge.py.stale-2026-05-02.bak  dream_engine.py  dream_engine.py.stale-2026-05-02.bak  dream_worker.py  embed_provider.py  embed_provider.py.stale-2026-05-02.bak  lstm_knn_bridge.py  memory_client.py  memory_client.py.stale-2026-05-02.bak  mssql_store.py  neural_memory.py  neural_skin.yaml  plugin.yaml
hermes-plugin/skills/devops/neural-dream-engine/: SKILL.md
include/mazemaker/: c_api.h  community.h  memory_adapter.h
include/neural/: c_api.h  knn.h  lstm.h  memory.h  mssql.h  simd.h  vector.h
python/: __init__.py  access_logger.py  ae_workflow_helpers.py  afe.py  build_gpu_cache.py  classify_memory_kind.py  cpp_bridge.py  cpp_dream_backend.py  dream_engine.hpp  dream_engine.py  dream_mssql_store.py  dream_postgres_store.py  dream_worker.py  embed-server.py  embed_provider.py  entity_extraction.py  fast_ops.c  fast_ops.pyx  gpu_recall.py  import_honcho.py  ingest_pulse.py  license.py  lstm_knn_bridge.py  mazemaker.py  memory_client.py  memory_types.py  mssql_store.py  neural_memory.py  postgres_store.py  schema_upgrade.py  self_portrait_substrate.py  sync_bridge.py  synthesis.py  test_ae_bench_harness.py  test_ae_bench_label_integrity.py  test_ae_domain_bench_run_authority.py  test_ae_evidence_ingest.py  test_ae_workflow_helpers.py  test_dream_nrem_batching.py  test_embed_dim_guard.py  (+22 more)
scripts/: import_beam_to_pg.py  import_mazemaker_runtime.py  import_raw_corpora_to_pg.py
skills/neural-dream-engine/: SKILL.md
smolvm/: Dockerfile
src/: main.cpp
src/benchmarks/: bench_memory.cpp
src/core/: c_api.cpp  memory_adapter.cpp
src/graph/: community.cpp
src/memory/: knn.cpp  lstm.cpp
src/mssql/: bulk_ops.cpp  connection_pool.cpp  vector_store.cpp
src/simd/: simd_engine.cpp
tests/: test_suite.py
tools/: ae_domain_bench_run.sh  cleanup_dream_insights.py  cleanup_onedrive_dupes.py  codex_always_on_runner.sh  codex_apply.sh  codex_orchestrator_daemon.sh  codex_orchestrator_synthesize.sh  codex_project_analyzer.sh  codex_resolve.sh  codex_subagent.sh  ingest_ae_corpus.py  ingest_sent_pdf_sidecars.py  ingest_wa_dryrun.py  label_candidate_seeder.py  neural-memory-snapshot-daily.sh  nm.py  nm_digest.py  nm_recall_mcp.py  observer.py  per_commit_reviewer.sh  phase7_audit.py  post_ingest_sanity.py  production_upgrade.py  reconciliation_reviewer.sh  reembed_substrate.py  scorer_ablation.py  self_portrait_cycle.py  sync_sqlite_to_mssql.py  watcher_health_check.sh
tools/dashboard/: generate.py  live_server.py  neural_desktop.py  template-live.html  template-mirror.html  template.html
tools/launchd/: README.md  com.ae.ae-domain-bench-aor.plist  com.ae.codex-archaeology-aor.plist  com.ae.codex-orchestrator.plist  com.ae.codex-project-analyzer-aor.plist  com.ae.codex-project-analyzer.plist  com.ae.codex-todo-sweep-aor.plist  com.ae.neural-memory-ingest.plist  com.ae.neural-memory-per-commit-review-aor.plist  com.ae.neural-memory-per-commit-review.plist  com.ae.neural-memory-snapshot.plist  com.ae.neural-reconciliation-reviewer-aor.plist  com.ae.neural-watcher-health-aor.plist
